--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gumhq/sdk": "^1.0.0",
     "@next/font": "13.1.5",
+    "@solana/wallet-adapter-base": "^0.9.20",
+    "@solana/wallet-adapter-react": "^0.15.26",
+    "@solana/wallet-adapter-react-ui": "^0.9.24",
+    "@solana/wallet-adapter-wallets": "^0.19.9",
+    "@solana/web3.js": "^1.73.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
