--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gumhq/sdk": "^1.0.3",
+    "@gumhq/react-sdk": "^1.0.6",
     "@next/font": "13.1.5",
     "@solana/wallet-adapter-base": "^0.9.20",
     "@solana/wallet-adapter-react": "^0.15.26",
