--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SOLANA_ENDPOINT = https://rpc-devnet.helius.xyz/?api-key=bd84f952-3b93-4911-8413-1617fe18f115
+NEXT_PUBLIC_SOLANA_ENDPOINT = <PUT YOUR SOLANA ENDPOINT HERE>
